tests/NormalTests/paczka1/small_fuzzy/86982171.err
Error in line 1: NHGNzcW1Z A2 71,3
Error in line 2: NHGNzcW1Z S710 53,3
Error in line 4: mIqoONeHZL2 S524 17,9
